--- a/sauron/resource/push_button.ui
+++ b/sauron/resource/push_button.ui
@@ -6,60 +6,76 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>317</width>
-    <height>103</height>
+    <width>524</width>
+    <height>256</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>20</y>
-     <width>161</width>
-     <height>61</height>
+     <x>30</x>
+     <y>30</y>
+     <width>481</width>
+     <height>161</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout_2">
-    <item>
-     <widget class="QLabel" name="label_1">
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QPushButton" name="homeButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="text">
-       <string>This is label 1.</string>
+       <string>HOME</string>
       </property>
      </widget>
     </item>
-    <item>
-     <widget class="QLabel" name="label_2">
+    <item row="1" column="0">
+     <widget class="QPushButton" name="enableButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
       <property name="text">
-       <string>This is label 2.</string>
+       <string>ENABLE</string>
       </property>
      </widget>
     </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="layoutWidget_2">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>106</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QPushButton" name="pushButton1">
+    <item row="0" column="1">
+     <widget class="QLabel" name="homeLabel">
       <property name="text">
-       <string>Push Button 1</string>
+       <string>Home time will show when homed</string>
       </property>
      </widget>
     </item>
-    <item>
-     <widget class="QPushButton" name="pushButton2">
+    <item row="1" column="1">
+     <widget class="QPushButton" name="disableButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
       <property name="text">
-       <string>Push Button 2</string>
+       <string>DISABLE</string>
       </property>
      </widget>
     </item>
